assets/style.scss
/* ... */
@font-face{
    font-family: "Renner";
    font-weight: 200;
    font-style: italic;
    src: url("~assets/fonts/Renner/renner-lightitalic.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 300;
    font-style: normal;
    src: url("~assets/fonts/Renner/renner-book.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 300;
    font-style: italic;
    src: url("~assets/fonts/Renner/renner-bookitalic.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 500;
    font-style: normal;
    src: url("~assets/fonts/Renner/renner-medium.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 500;
    font-style: italic;
    src: url("~assets/fonts/Renner/renner-mediumitalic.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 700;
    font-style: normal;
    src: url("~assets/fonts/Renner/renner-bold.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 700;
    font-style: italic;
    src: url("~assets/fonts/Renner/renner-bolditalic.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 800;
    font-style: normal;
    src: url("~assets/fonts/Renner/renner-black.otf");
}
@font-face{
    font-family: "Renner";
    font-weight: 800;
    font-style: italic;
    src: url("~assets/fonts/Renner/renner-blackitalic.otf");
}

/* VARIABLES */

	/* COULEURS */

    $vert: #68b32d;
    $vertFonce: #5AA91E;
    $gris: #dddddd;
    $grisFonce: #bbbbbb;
    $grisFonceFonce: #aaaaaa;
    $grisHautCTA: #333333;
    $grisHautCTAFonce: #000000;
    $noir: #000000;
    $blanc: #ffffff;
    
    /* MIXINS */
    
    @mixin transition($vitesse, $easing: ease) {
        transition: all $vitesse $easing;
        -webkit-transition: all $vitesse $easing;
        -moz-transition: all $vitesse $easing;
        -o-transition: all $vitesse $easing;
        -ms-transition: all $vitesse $easing;
    }
    
    @mixin spinKeyframes($nom, $debut, $fin){
        @keyframes #{$nom} {
            0% { transform: rotate($debut); }
            100% { transform: rotate($fin); }
        }
        @-webkit-keyframes #{$nom} {
            0% { transform: rotate($debut); }
            100% { transform: rotate($fin); }
        }
        @-moz-keyframes #{$nom} {
            0% { transform: rotate($debut); }
            100% { transform: rotate($fin); }
        }
        @-o-keyframes #{$nom} {
            0% { transform: rotate($debut); }
            100% { transform: rotate($fin); }
        }
    }
    
    @mixin spinAnimation($nom, $duree){
        animation: $nom $duree linear infinite;
        -webkit-animation: $nom $duree linear infinite;
        -moz-animation: $nom $duree linear infinite;
        -ms-animation: $nom $duree linear infinite;
        -o-animation: $nom $duree linear infinite;
    }
    
    /* CSS DU SITE */
    
    /* Style de base */
    
        /* Mise en page de la page */
    
    body{
        font-family: 'Renner';
        font-weight: 200;
        font-size: 16px;
        width: 100%;
        min-height: 100%;
        margin: 0px;
        padding: 0px;
        padding-bottom: 50px;
        position: relative; 
    }
    
    html{
        /*height: 100%;*/
    }
    
    .no-transition{
        -webkit-transition: none !important;
        -moz-transition: none !important;
        -ms-transition: none !important;
        -o-transition: none !important;
        transition: none !important;
    }
    
        /* Titres */
    
    h1{
        font-family: 'Nunito Sans';
        font-weight: 900;
        color: $vert;
        text-align: center;
        font-size: 4em;
        margin-top: 30px;
        margin-bottom: 50px;
    }

    h2, h3, h4, h5, h6{
        font-family: 'Renner';
        font-weight: 700;
    }
    
        /* Mise en forme du texte */
    
    a{
        color: $vert;
    }

    .green-button{
        appearance: none;
        -webkit-appearance: none;
        background-color: $vert;
        padding: 0px 35px;
        font-size: 1.5em;
        font-weight: 500;
        color: black!important;
        text-decoration: none!important;
        position: relative;
        height: 60px;
        line-height: 60px;
        display: inline-block;
        @include transition(0.2s);

        &:before{
            content: "";
            position: absolute;
            height: 60px;
            width: 60px;
            border-radius: 50%;
            background-color: $vert;
            left: -30px;
            top: 0;
            @include transition(0.2s);
        }
        &:after{
            content: "";
            position: absolute;
            height: 60px;
            width: 60px;
            border-radius: 50%;
            background-color: $vert;
            right: -30px;
            top: 0;
            @include transition(0.2s);
        }
        &:hover, &:focus{
            color: black!important;
            text-decoration: none!important;
            background-color: darken($vert, 5%);

            &:before{
                background-color: darken($vert, 5%);
            }
            &:after{
                background-color: darken($vert, 5%);
            }
        }
    }
    
    ::selection, -webkit-::selection, -moz-::selection, -o-::selection, -ms-::selection{
        background-color: $vert;
        color: $blanc;
    }
    
        /* Empêche de resizer les textarea */
    
    textarea{
        resize: none;
    }
/* ... */

